--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="samurais.holiday.password_manager">
-   <application
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
+    <application
         android:label="password_manager"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
