--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
     package="samurais.holiday.password_manager">
     <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
     <application
-        android:label="password_manager"
+        android:label="Password Manager"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
