--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   local_auth: ^2.1.2
   flutter_secure_storage: ^6.0.0
   logger: ^1.1.0
+  flutter_launcher_icons: ^0.11.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "asset/icon/app_icon.png"
 
 dev_dependencies:
   flutter_test:
