--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   logger: ^1.1.0
   flutter_launcher_icons: ^0.11.0
+  url_launcher: ^6.1.7
 
 flutter_icons:
   android: "launcher_icon"
