アーカイブの有効化を実施
アプリの一部を削除することで、一時的にアプリストレージの最大60%が再利用できるらしい
＞ https://android-developers.googleblog.com/2022/03/freeing-up-60-of-storage-for-apps.html

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,6 +74,12 @@ android {
         }
     }
 
+    bundle {
+        storeArchive {
+            enable = false
+        }
+    }
+
     buildTypes {
         release {
             signingConfig signingConfigs.release
